--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
         <div class="header_menu">
             <a class="header_menu_link" href="index.html">Главная</a>
             <a class="header_menu_link" href="services.html">Услуги</a>
-            <a class="header_menu_link" href="projects.html">Проекты</a>
-            <a class="header_menu_link">Компании</a>
+            <a class="header_menu_link" href="">Проекты</a>
+            <a class="header_menu_link" href="companies.html">Компании</a>
             <a class="header_menu_link">Блог</a>
             <a class="header_menu_link">Контакты</a>
         </div>
