--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="header_menu_link" href="index.html">Главная</a>
             <a class="header_menu_link" href="services.html">Услуги</a>
             <a class="header_menu_link" href="">Проекты</a>
-            <a class="header_menu_link">Компании</a>
+            <a class="header_menu_link" href="companies.html">Компании</a>
             <a class="header_menu_link">Блог</a>
             <a class="header_menu_link">Контакты</a>
         </div>
