--- a/projects.html
+++ b/projects.html
@@ -252,7 +252,7 @@
 
         </div>
         <div class="ads_rightmenu col-9">
-            <div class="row">
+            <div class="row"_>
                 <div class="ads_rightmenu_block col-6 mr-4 mb-4">
                     <div class="ads_rightmenu_block_text ">
                         <a>Продвижение
