--- a/companies.html
+++ b/companies.html
@@ -166,22 +166,18 @@
 
         </div>
         <div class="reviews_rightmenu col-9">
-            <div class="row">
-
-                <div class="reviews_rightmenu_block">
-
-                    <div class="reviews_rightmenu_block_header">
+            <div class="row justify-content-start">
+                <div class="reviews_rightmenu_block mr-4">
+                    <div class="reviews_rightmenu_block_header mt-4 ml-4">
                         <div class="reviews_rightmenu_block_header_image">
                             <img src="/img/avatar.svg" alt="">
                         </div>
-                        <div class="reviews_rightmenu_block_header_person">
+                        <div class="reviews_rightmenu_block_header_person ml-4">
                             <span>Андрей Васильченко</span>
-                            <span>Яндекс</span>
+                            <span style="font-weight: bold;">Яндекс</span>
                         </div>
-
                     </div>
-
-                    <div class="reviews_rightmenu_block_body">
+                    <div class="reviews_rightmenu_block_body ml-4 mr-4">
 
                         <span>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse gravida risus at
@@ -189,19 +185,116 @@
                             ex congue in.Cras quis sem quis turpis.
                         </span>
                     </div>
-
-                    <div class="reviews_rightmenu_block_footer">
+                    <div class="reviews_rightmenu_block_footer ml-4 mb-4">
                         <a href="">Открыть проект</a><img class="redarrow" src="img/Vector.svg" alt="">
+                    </div>
+                </div>
+                <div class="reviews_rightmenu_block ml-3">
+                    <div class="reviews_rightmenu_block_header mt-4 ml-4">
+                        <div class="reviews_rightmenu_block_header_image">
+                            <img src="/img/avatar.svg" alt="">
+                        </div>
+                        <div class="reviews_rightmenu_block_header_person ml-4">
+                            <span>Андрей Васильченко</span>
+                            <span style="font-weight: bold;">Яндекс</span>
+                        </div>
+                    </div>
+                    <div class="reviews_rightmenu_block_body ml-4 mr-4">
+
+                        <span>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse gravida risus at
+                            nulla accumsan, ac porta velit consectetur. Duis molestie dolor dui, ut vestibulum
+                            ex congue in.Cras quis sem quis turpis.
+                        </span>
+                    </div>
+                    <div class="reviews_rightmenu_block_footer ml-4 mb-4">
+                        <a href="">Открыть проект</a><img class="redarrow" src="img/Vector.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="reviews_rightmenu_block mt-4">
+                    <div class="reviews_rightmenu_block_header mt-4 ml-4">
+                        <div class="reviews_rightmenu_block_header_image">
+                            <img src="/img/avatar.svg" alt="">
+                        </div>
+                        <div class="reviews_rightmenu_block_header_person ml-4">
+                            <span>Андрей Васильченко</span>
+                            <span style="font-weight: bold;">Яндекс</span>
+                        </div>
+                    </div>
+                    <div class="reviews_rightmenu_block_body ml-4 mr-4">
+
+                        <span>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse gravida risus at
+                            nulla accumsan, ac porta velit consectetur. Duis molestie dolor dui, ut vestibulum
+                            ex congue in.Cras quis sem quis turpis.
+                        </span>
+                    </div>
+                    <div class="reviews_rightmenu_block_footer ml-4 mb-4">
+                        <a href="">Открыть проект</a><img class="redarrow" src="img/Vector.svg" alt="">
+                    </div>
+                </div>
+                <div class="reviews_rightmenu_letter">
+                    <div class="reviews_rightmenu_letter_title mt-4 ml-3">
+                        <div class="reviews_rightmenu_letter_title_logo">
+                            <img src="/img/img_5.png" alt="">
+                        </div>
+                        <div class="reviews_rightmenu_letter_title_name" style="font-weight: bold">
+                            <span>ООО «Тойота Мотор»</span>
+                        </div>
+                    </div>
+                    <div class="reviews_rightmenu_letter_text mt-4 ml-3">
+                        <span>Благодарственное письмо</span>
+                      <pre>  <span>ООО «Тойота Мотор»</span></pre>
+                    </div>
+                    <div class="reviews_rightmenu_letter_action mt-4 ml-3">
+                        <a href="">Открыть письмо</a><img class="redarrow" src="img/arrow.svg" alt="">
                     </div>
 
                 </div>
 
-
             </div>
-
 
         </div>
     </div>
 </div>
+<footer class="footer">
+    <div class="row justify-content-center align-items-baseline container">
+        <div class="footer_logo mr-5 col ">
+            <img src="/img/footer__logo.svg" alt="">
+        </div>
+        <div class="footer_item col">
+            <div class="footer_item_title"><span>Правовая часть</span></div>
+            <div class="footer_item_li">
+                <p><a>Обработка персональных данных</a></p>
+                <p><a>Правила пользования сайтом</a></p>
+                <p><a>© Qwerteam 2021</a></p>
+
+            </div>
+        </div>
+        <div class="footer_item col">
+            <div class="footer_item_title"><span>Услуги</span>
+            </div>
+            <div class="footer_item_li">
+                <p><a href="#dev">Разработка сайтов</a></p>
+                <p><a>Техническое ведение сайтов</a></p>
+                <p><a>SMM</a></p>
+            </div>
+        </div>
+        <div class="footer_item col">
+            <div class="footer_item_title"><span>Контакты</span>
+            </div>
+            <div class="footer_item_li">
+                <p><a>+7 (999) 999-99-99 </a></p>
+                <p><a>sale@include.digital</a></p>
+                <p><a>г.Оренбург, д.1, п.1</a></p>
+                <p><a>Vkontakte <img class="redarrow" src="img/Vector.svg" alt=""></a></p>
+                <p><a>Instagram ><img class="redarrow" src="img/Vector.svg" alt=""></a></p>
+                <p><a>Facebook <img class="redarrow" src="img/Vector.svg" alt=""></a></p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
