--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,6 @@
     <!-- Bootstrap CSS (jsDelivr CDN) -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/maincss.css" type="text/css" rel="stylesheet">
-    <link href="/css/sevices.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext"
           rel="stylesheet">
     <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
@@ -77,7 +76,7 @@
                 </div>
                 <div class="sites_rightmenu_block col-3 mb-4 ml-4" style="background: #695B9F">
                     <div class="sites_rightmenu_block_image mt-3">
-                        <img src="/img/pic3.png" alt="">
+                        <img src="/img/promo1.png" alt="">
                     </div>
                     <div class="sites_rightmenu_block_text">
                         <a>Крутой проект <img class="redarrow" src="img/arrow.svg" alt=""></a>
